Compressed all images for faster load time | Finished portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
@@ -48,7 +49,7 @@
 						<header>
 							<div class="inner">
 								<h2>My Story/Portfolio</h2>
-								<p>Get ready to read the story of how I got to whre I am today</p>
+								<p>Get ready to read the story of how I got to where I am today</p>
 							</div>
 						</header>
 
@@ -57,25 +58,67 @@
 								<div class="inner">
 
 									<h3 class="major">The Inspiration</h3>
-									<p>Ever since I was little, I </p>
+									<p>Ever since I was little, I had a fascination with computers and technology. Especially with taking things apart and putting them back together. So as I grew up and went into the 8<sup>th</sup> grade, I was recommended to take a computer class, where I learned static HTML & CSS. When I mad my very first static website, I was ecstatic! So as you can imagine, it took off from there. </p>
 
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+									<p>I started with the most basic website platform/builder ever, which at the time was Webs, and then Weebly. I started out with making websites for my classes, then for my non-profit business, and now I do it for a living. I started this business because I have a passion for making websites for people to help expand their business and to bring in more clients. I really hope you will consider me to be your website development contractor</p>
 
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h3 class="major">My Promise</h3>
+									<p>When you choose Mendoza Web Design, you are choosing a polished, professional, web developer, who is dedicated to getting your website up and running as fast as possible without affecting its quality. When something doesn't work, I'm THAT guy who stays up until all hours trying to fix it. Thats how dedicated I am. <br> I hope you choose Mendoza Web Design for all of your web development needs, and I thank you for your time and consideration! <p>Sincerely, <br> <span style="font-family: 'Cedarville Cursive', cursive;font-size: 30px">Cristian Mendoza</span></p></p>
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/cornerstone.png" alt="Cornerstone Family Counseling" /></a>
+											<h3 class="major">Cornerstone Family Counseling</h3>
+											<p>his website was created with a low budget of $250, and was a complete re-design for the organization. It took 1 week to complete with about 35 - 40 hrs in total work time. [Made from 100% HTML and CSS]</p>
+											<a href="http://www.cornerstoneoakhurst.com"  target="_blank" class="special">Visit Site</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/todoapp.png" alt="JAVASCRIPT To Do App" /></a>
+											<h3 class="major">JS To-Do App</h3>
+											<p>This application was put together in 4-6 Weeks in a JS (JavaScript) course taken at <a href="https://geekwiseacademy.com/" target="_blank">Geekwise Academy</a>, and uses Bootstrap Frameworking, Glyphicons, and a lot of logic with built-in localStorage</p>
+											<a href="https://js1-final-cm.netlify.com/" target="_blank" class="special">Visit Site</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/mysite.png" alt="Very first website" /></a>
+											<h3 class="major">First Official Website</h3>
+											<p>This was my very first website that I built from scratch with 100% HTML, CSS, and JS. This was my final project for a beginners' web design class that I took at <a href="https://geekwiseacademy.com/" target="_blank">Geekwise Academy</a></p>
+											<a href="https://thattechnokid.github.io/myofficialsite.github.io/" target="_blank"  class="special">Visit Site</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/proshine.png" alt="" /></a>
+											<h3 class="major">Pro Shine Window Cleaning</h3>
+											<p>This website was made for a client who wanted to expand and advertise his business, and was created with the Weebly platform</p>
+											<a href="http://www.proshine21.com" target="_blank" class="special">Visit Site</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ccbc.png" alt="Christ Community Bible Church" /></a>
+											<h3 class="major">Christ Community Bible Church</h3>
+											<p>This website was made for a church that I used to attend, and was made with the WordPress Platform. <p> <span style="color:red;font-weight: bold">*NOTE*</span> I am no longer in charge of maintaining this website</p></p>
+											<a href="http://www.christcbc.org" target="_blank" class="special">Visit Site</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/yhs.png" alt="" /></a>
+											<h3 class="major" style="text-align: center">YHS Badger Band</h3>
+											<p>This website was for my high school band that I made with Weebly, since I was elected the official Band Webmaster. I still manage the website and make changes to it here and there.</p>
+											<a href="http://www.yhsmusic.com" target="_blank" class="special">Visit Site</a>
+										</article>
+										<article >
+											<a href="#" class="image"><img src="images/dudes.png" alt="" /></a>
+											<h3 class="major" style="text-align: center">D.U.D.E.S <br>Dollars for Underdeveloped Economic Societies</h3>
+											<p>I made this site for my non-profit business that I started/cofounded with some friends in the 4th grade, and was made with Weebly</p>
+											<a href="http://www.dudesyosemite.weebly.com" target="_blank" class="special">Visit Site</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/history.png" alt="" /></a>
+											<h3 class="major">OCC History 12</h3>
+											<p>I made this website with Weebly for a History class I was in at the Oakhurst Community College It is no longer up and running, but I just thought it should go on here anyways</p>
+											
+										</article>
+										<article style="transform: translate(-50%);position: relative;left:50%;">
+											<a href="#" class="image"><img src="images/chemistry.png" alt="" /></a>
+											<h3 class="major" style="text-align: center">GHS Chemistry</h3>
+											<p>This was the very first Webs website that I made, and was used to make posts and allow the Chemistry teacher and the students to communicate with each other and ask questions.</p>
+											<a href="http://www.ghschemistry.webs.com" target="_blank" class="special">Visit Site</a>
 										</article>
 									</section>
 
