--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
 											<a href="http://www.cornerstoneoakhurst.com" class="special" target="_blank">Visit Site</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/mysite.png" alt="Mendoza Web Design First website preview image" /></a>
-											<h3 class="major">Class Final Project</h3>
-											<p>This was my very first website made 100% from scratch and took a few weeks to make. This was a final project for a class taken in web development at Geekwise Academy</p>
-											<a href="https://thattechnokid.github.io/myofficialsite.github.io/" class="special" target="_blank">Visit Site</a>
+											<a href="#" class="image"><img src="images/todoapp.png" alt="JAVASCRIPT To Do App" /></a>
+											<h3 class="major">JS To-Do App</h3>
+											<p>This application was put together in 4-6 Weeks in a JS (JavaScript) course taken at <a href="https://geekwiseacademy.com/" target="_blank">Geekwise Academy</a>, and uses Bootstrap Frameworking, Glyphicons, and a lot of logic with built-in localStorage</p>
+											<a href="https://js1-final-cm.netlify.com/" target="_blank" class="special">Visit Site</a>
+										</article>">Visit Site</a>
 										</article>
 										
 									</section>
