--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 								<div class="inner">
 
 									<h3 class="major">The Inspiration</h3>
-									<p>Ever since I was little, I had a fascination with computers and technology. Especially with taking things apart and putting them back together. So as I grew up and went into the 8<sup>th</sup> grade, I was recommended to take a computer class, where I learned static HTML & CSS. When I mad my very first static website, I was ecstatic! So as you can imagine, it took off from there. </p>
+									<p>Ever since I was little, I had a fascination with computers and technology. Especially with taking things apart and putting them back together. So as I grew up and went into the 8<sup>th</sup> grade, I was recommended to take a computer class, where I learned static HTML & CSS. When I made my very first static website, I was ecstatic! So as you can imagine, it took off from there. </p>
 
 									<p>I started with the most basic website platform/builder ever, which at the time was Webs, and then Weebly. I started out with making websites for my classes, then for my non-profit business, and now I do it for a living. I started this business because I have a passion for making websites for people to help expand their business and to bring in more clients. I really hope you will consider me to be your website development contractor</p>
 
@@ -69,7 +69,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/cornerstone.png" alt="Cornerstone Family Counseling" /></a>
 											<h3 class="major">Cornerstone Family Counseling</h3>
-											<p>his website was created with a low budget of $250, and was a complete re-design for the organization. It took 1 week to complete with about 35 - 40 hrs in total work time. [Made from 100% HTML and CSS]</p>
+											<p>This website was created with a low budget of $250, and was a complete re-design for the organization. It took 1 week to complete with about 35 - 40 hrs in total work time. [Made from 100% HTML and CSS]</p>
 											<a href="http://www.cornerstoneoakhurst.com"  target="_blank" class="special">Visit Site</a>
 										</article>
 										<article>
