minor grammar and error changes

--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/todoapp.png" alt="JAVASCRIPT To Do App" /></a>
 											<h3 class="major">JS To-Do App</h3>
-											<p>This application was put together in 4-6 Weeks in a JS (JavaScript) course taken at <a href="https://geekwiseacademy.com/" target="_blank">Geekwise Academy</a>, and uses Bootstrap Frameworking, Glyphicons, and a lot of logic with built-in localStorage</p>
+											<p>This application was put together in 4-6 Weeks in a JS (JavaScript) course taken at <a href="https://geekwiseacademy.com/" target="_blank">Geekwise Academy</a>, and uses Bootstrap Frameworking, Glyphicons, and a lot of logic with built-in local storage</p>
 											<a href="https://js1-final-cm.netlify.com/" target="_blank" class="special">Visit Site</a>
-										</article>">Visit Site</a>
 										</article>
 										
 									</section>
