minor grammar and error changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
 									<p>I started with the most basic website platform/builder ever, which at the time was Webs, and then Weebly. I started out with making websites for my classes, then for my non-profit business, and now I do it for a living. I started this business because I have a passion for making websites for people to help expand their business and to bring in more clients. I really hope you will consider me to be your website development contractor</p>
 
 									<h3 class="major">My Promise</h3>
-									<p>When you choose Mendoza Web Design, you are choosing a polished, professional, web developer, who is dedicated to getting your website up and running as fast as possible without affecting its quality. When something doesn't work, I'm THAT guy who stays up until all hours trying to fix it. Thats how dedicated I am. <br> I hope you choose Mendoza Web Design for all of your web development needs, and I thank you for your time and consideration! <p>Sincerely, <br> <span style="font-family: 'Cedarville Cursive', cursive;font-size: 30px">Cristian Mendoza</span></p></p>
+									<p>When you choose Mendoza Web Design, you are choosing a polished, professional, web developer, who is dedicated to getting your website up and running as fast as possible without affecting its quality. When something doesn't work, I'm THAT guy who stays up until all hours trying to fix it. Thats how dedicated I am. I hope you choose Mendoza Web Design for all of your web development needs, and I thank you for your time and consideration! <p>Sincerely, <br> <span style="font-family: 'Cedarville Cursive', cursive;font-size: 30px">Cristian Mendoza</span></p></p>
 
 									<section class="features">
 										<article>
