Removed price on cornerstone site

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/cornerstone.png" alt="Cornerstone Family Counseling Site Image Preview" /></a>
 											<h3 class="major">Cornerstone Family Counseling</h3>
-											<p>This website was created with a low budget of $250, and was a complete re-design for the organization. It took 1 week to complete with about 35 - 40 hrs in total work time. [Made from 100% HTML and CSS]</p>
+											<p>This website was a complete re-design for the organization. It took 1 week to complete with about 35 - 40 hrs in total work time. [Made from 100% HTML and CSS]</p>
 											<a href="http://www.cornerstoneoakhurst.com" class="special" target="_blank">Visit Site</a>
 										</article>
 										<article>
