--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+		<!-- Hotjar Tracking Code for www.mendozawebsites.com -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+				h._hjSettings = { hjid: 935651, hjsv: 6 };
+				a = o.getElementsByTagName('head')[0];
+				r = o.createElement('script'); r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+		</script>
 	</head>
 	<body>
 
