Added Marine Survey Site to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 						<header>
 							<div class="inner">
 								<h2>My Story/Portfolio</h2>
-								<p>Get ready to read the story of how I got to where I am today</p>
+								<p>Here's My Story</p>
 							</div>
 						</header>
 
@@ -77,6 +77,12 @@
 									<p>When you choose Mendoza Web Design, you are choosing a polished, professional, web developer, who is dedicated to getting your website up and running as fast as possible without affecting its quality. When something doesn't work, I'm THAT guy who stays up until all hours trying to fix it. Thats how dedicated I am. I hope you choose Mendoza Web Design for all of your web development needs, and I thank you for your time and consideration! <p>Sincerely, <br> <span style="font-family: 'Cedarville Cursive', cursive;font-size: 30px">Cristian Mendoza</span></p></p>
 
 									<section class="features">
+											<article>
+													<a href="#" class="image"><img src="images/msf.png" alt="Marine Survey Fabrication" /></a>
+													<h3 class="major">Marine Survey Fabrication</h3>
+													<p>This website was a brand new brochure website for the Marine Survey Fabrication Company located in Coarsegold, CA.</p>
+													<a href="https://www.finncom-msf.com"  target="_blank" class="special">Visit Site</a>
+												</article>
 										<article>
 											<a href="#" class="image"><img src="images/cornerstone.png" alt="Cornerstone Family Counseling" /></a>
 											<h3 class="major">Cornerstone Family Counseling</h3>
@@ -126,7 +132,8 @@
 											<p>I made this website with Weebly for a History class I was in at the Oakhurst Community College It is no longer up and running, but I just thought it should go on here anyways</p>
 											
 										</article>
-										<article style="transform: translate(-50%);position: relative;left:50%;">
+										<!-- <article style="transform: translate(-50%);position: relative;left:50%;"> -->
+											<article>
 											<a href="#" class="image"><img src="images/chemistry.png" alt="" /></a>
 											<h3 class="major" style="text-align: center">GHS Chemistry</h3>
 											<p>This was the very first Webs website that I made, and was used to make posts and allow the Chemistry teacher and the students to communicate with each other and ask questions.</p>
